<resources>
    <string name="app_name">Calculator</string>
    <string name="hint">Начните вводить</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multi">*</string>
    <string name="open_br">(</string>
    <string name="close_br">)</string>
    <string name="dot">.</string>
    <string name="cancel">C</string>
    <string name="equal">=</string>
    <string name="delete">delete</string>
    <string name="bin">Двоичная система</string>
    <string name="oct">Восьмиричная система</string>
    <string name="hex">Шестнадцатиричная система</string>
    <string name="dec">Десятичная система</string>
    <string name="A">A</string>
    <string name="D">D</string>
    <string name="B">B</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="C">C</string>
    <string name="fn">fn</string>
    <string name="sin">sin()</string>
    <string name="cos">cos()</string>
    <string name="tan">tan()</string>
    <string name="cotan">cotan()</string>
    <string name="tg">tg()</string>
    <string name="ctg">ctg()</string>
    <string name="exp">exp()</string>
    <string name="ln">ln()</string>
    <string name="log">log()</string>
    <string name="minus1">1/x</string>
    <string name="square">x^2</string>
    <string name="cube">x^3</string>
    <string name="power">x^y</string>
    <string name="rand">rand()</string>
    <string name="twoPower">2^x</string>
</resources>
