<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_sin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/sin"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_cos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/cos"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_tan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/tg"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_ctg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/ctg"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_exp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/exp"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_ln"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/ln"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/log"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_two_power"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:textSize="24sp"
            android:text="@string/twoPower"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_minus1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/minus1"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_square"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/square"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_cube"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/cube"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
        <Button
            android:id="@+id/button_random"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/rand"
            android:textSize="24sp"
            android:onClick="onClickFunction"
            android:background="@color/colorBackgroundKeyboard"/>
    </LinearLayout>
</LinearLayout>
