<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="18">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="15"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_D"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/D"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_A"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/A"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/seven"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/four"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_E"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/E"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_B"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/B"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/eight"
                android:textSize="24sp"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/five"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/two"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_F"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/F"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_C"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/C"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/nine"
                android:textSize="24sp"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/six"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/three"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button

                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackgroundKeyboard"/>
        </LinearLayout>
    </LinearLayout>
