<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="50">
    <ScrollView
        android:id="@+id/scroll_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@color/colorLinearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end">
            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24sp"
                android:gravity="end|bottom"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical|end"
        android:hint="@string/hint"
        android:textSize="24sp"
        android:background="@color/colorLinearLayout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_weight="6">
        <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClickCancel"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:background="@color/colorAccent"/>
        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickDelete"
            android:src="@drawable/ic_backspace_black_24dp"
            android:background="@color/colorBackground"
            android:contentDescription="@string/delete"/>

        <Button
            android:id="@+id/button_open_br"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open_br"
            android:textSize="24sp"
            android:onClick="onClick"
            android:background="@color/colorBackground"/>
        <Button
            android:id="@+id/button_close_br"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/close_br"
            android:textSize="24sp"
            android:onClick="onClick"
            android:background="@color/colorBackground"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="end">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:weightSum="18"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/keyboard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="18">
            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:weightSum="6">
            <Button
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackground"/>
            <Button
                android:id="@+id/button_multi"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:text="@string/multi"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackground"/>
            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackground"/>
            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="24sp"
                android:onClick="onClick"
                android:background="@color/colorBackground"/>
            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:onClick="onClickEqual"
                android:text="@string/equal"
                android:textSize="24sp"
                android:background="@color/colorBackground"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>